2023-09-27T08:21:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6323286690 # 1202
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 258 865 / 264 881
* notice: next accum: outdated-unq outdated-all / unq all: 258 865 / 265 883
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-27]

2023-09-27T01:12:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6320124540 # 1201
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 258 865 / 263 877
* notice: next accum: outdated-unq outdated-all / unq all: 258 865 / 264 881
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +6 -0 -0 / 2 6
* notice: removed / changed dates: [] / [2023-09-26]

2023-09-26T08:21:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6309996006 # 1199
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-26
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 258 865 / 262 875
* notice: next accum: outdated-unq outdated-all / unq all: 258 865 / 263 877
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-26]

2023-09-26T01:12:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6306769220 # 1198