@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-27T08:21:28Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2023-09-27T16:22:01Z",
+  "count" : 25,
+  "count_minmax" : [ 2, 25 ],
+  "count_decinc" : [ -0, +25 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
