@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-27T08:21:28Z",
+  "timestamp" : "2023-09-27T16:22:01Z",
   "count_outdated" : 865,
   "uniques_outdated" : 258,
-  "count" : 883,
-  "uniques" : 265,
+  "count" : 906,
+  "uniques" : 266,
   "views" : [
     {
       "timestamp": "2023-09-16T00:00:00Z",
@@ -52,12 +52,12 @@
     },
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 25,
+      "count_minmax": [ 2, 25 ],
+      "count_decinc": [ 0, 25 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
