@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 7,
+  "count": 41,
+  "uniques": 8,
   "views": [
     {
       "timestamp": "2023-09-16T00:00:00Z",
@@ -29,8 +29,8 @@
     },
     {
       "timestamp": "2023-09-27T00:00:00Z",
-      "count": 2,
-      "uniques": 1
+      "count": 25,
+      "uniques": 2
     }
   ]
 }
