@@ -1,3 +1,12 @@
+2023-09-27T16:22:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6328703994 # 1203
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
+* notice: last 14d: unq all: 8 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 258 865 / 265 883
+* notice: next accum: outdated-unq outdated-all / unq all: 258 865 / 266 906
+* notice: prev exec diff / last date diff / accum: unq all: +1 +23 -0 -0 / +2 +25 -0 -0 / 2 25
+* notice: removed / changed dates: [] / [2023-09-27]
+
 2023-09-27T08:21:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6323286690 # 1202
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-27
